# hackathon-frugal-ai

./: README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
documentation/: doc.md  screen.md
machine_learning/: hackathon.ipynb  predict.py  tesseract.ipynb  utlis.py
machine_learning/models/: Word2vec_entraine.h5  classification_model_sender.pkl  multinomialnb.pkl  vectorizer.pkl
pages/: 1_detecter.py  2_result.py  3_document.py  3_email.py  analyser.py  config.toml  result.py
results/: result.json
utlis/: footer.py  regex_text.py  scam_classifier.py  utlis.py
