[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contractions>=0.1.73",
    "gensim>=4.4.0",
    "nltk>=3.9.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "stopwords>=1.0.2",
    "streamlit==1.43.0",
    "streamlit-extras>=0.7.8",
]
